# labelCloud

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs.yaml  python-publish.yml  unit-tests.yml
labelCloud/: __main__.py
labelCloud/control/: bbox_controller.py  config_manager.py  controller.py  pcd_manager.py
labelCloud/definitions/: types.py
labelCloud/io/labels/: base.py  centroid.py  kitti.py  vertices.py
labelCloud/labeling_strategies/: spanning.py
labelCloud/model/: bbox.py  point_cloud.py
labelCloud/tests/integration/: conftest.py  test_gui.py  test_labeling.py
labelCloud/utils/: color.py  oglhelper.py  qt_loader.py
labelCloud/view/: gui.py  settings_dialog.py  status_manager.py  viewer.py
labelCloud/view/startup/: class_list.py  color_button.py  dialog.py  labeling_mode.py
