[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = [
    'tests',
]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[[tool.mypy.overrides]]
module = [
    "OpenGL.*",
    "open3d.*"
]
ignore_missing_imports = true
