[metadata]
name = labelCloud
version = attr: labelCloud.__init__.__version__
maintainer = Christoph Sager
maintainer_email = christoph.sager@gmail.com
license = GNU General Public License v3.0
description = A lightweight tool for labeling 3D bounding boxes in point clouds.
keywords =
    labelCloud
    machine learning
    computer vision
    annotation tool
    labeling
    point clouds
    bounding boxes
    3d object detection
    6d pose estimation
url = https://github.com/ch-sa/labelCloud
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Multimedia :: Graphics :: Viewers

[options]
zip_safe = False
packages =
    labelCloud
    labelCloud.control
    labelCloud.definitions
    labelCloud.definitions.label_formats
    labelCloud.io
    labelCloud.io.labels
    labelCloud.io.pointclouds
    labelCloud.io.segmentations
    labelCloud.labeling_strategies
    labelCloud.model
    labelCloud.resources
    labelCloud.resources.examples
    labelCloud.resources.icons
    labelCloud.resources.interfaces
    labelCloud.tests
    labelCloud.utils
    labelCloud.view
    labelCloud.view.startup
install_requires =
    numpy>=1.26.4,<2.0.0
    open3d>=0.19.0
    PyOpenGL>=3.1.10
    PyOpenGL-accelerate>=3.1.10
    PySide6>=6.9.0
    importlib-resources>=7.1.0; python_version >= '3.10'
    importlib-resources>=6.5.2; python_version < '3.10'
python_requires = >=3.9

[options.entry_points]
console_scripts =
    labelCloud = labelCloud.__main__:main

[options.extras_require]
tests =
    pytest~=8.4.2
    pytest-qt~=4.5.0
dev =
    black>=25.11.0
    mypy~=1.19.1
    types-setuptools~=81.0.0

[options.package_data]
labelCloud.resources = *.ini, *.pcd, *.txt, *.json
labelCloud.resources.examples = *.json, *.ply
labelCloud.resources.icons = *.ico, *.png, *.svg, *.txt
labelCloud.resources.interfaces = *.ui
